2009-12-10  Xan Lopez  <xlopez@igalia.com>

Reviewed by Jan Alonzo.

        [GTK] editing/selection/shrink-selection-after-shift-pagedown.html failing
        https://bugs.webkit.org/show_bug.cgi?id=31103

        Give focus to the webviews when we create them, since some tests expect this.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (main):

Canonical link: https://commits.webkit.org/43366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51941 268f45cc-cd09-0410-ab3c-d52691b4dbfc